# -IUM-Projekt

./: README.md  data.ipynb  pyproject.toml
IUM22Z_Zad_02_01_v1/: artists.jsonl  users.jsonl
data/: solution_ab_linear_ml.json  solution_ab_simple.json  solution_current.json  solution_linear.json  solution_ml.json  solution_simple.json  track_delays.jsonl  tracks_for_delay_validate.jsonl  tracks_for_storage_validate.jsonl
scripts/: analyze_basic.py
src/: analyze_basic.py  analyze_generated_data.py  analyze_predictors.py  analyze_provided_data.py  analyze_solutions.py  data_models.py  generate_data.py  generate_solutions.py  models.py  run_service.py  utils.py
src/client/: client.py
src/data/: analyze_delays.py  analyze_storage_cost.py  generate_delays.py  generate_tracks_for_delay.py  generate_tracks_for_storage.py
src/datamodels/: models.py
src/predictor/: avg_delay_predictor.py  daily_cost_predictor.py  test_predictors_performance.py
src/service/: service.py  solution.py  solver.py
src/solution/: current_solution.py  find_solution.py  solver.py
