[tool.poetry]
name = "ium-projekt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ium_projekt"}]

[tool.poetry.dependencies]
python = "3.10.*"
typing-extensions = "^4.4.0"
pandas = "^1.5.2"
scipy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"

pythonVersion = "3.10"
pythonPlatform = "Linux"

useLibraryCodeForTypes = true

reportMissingTypeArgument = "error"
reportImportCycles = "error"

reportUnusedClass = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
